--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.4.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+Flask-Login==0.5.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -18,3 +19,7 @@ visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
 gunicorn==20.1.0
+stripe~=5.2.0
+beautifulsoup4~=4.11.2
+redmail~=0.6.0
+python-dotenv~=1.0.0
